<resources>
    <string name="app_name">My Notes</string>
    <string name="show_drawer">Show drawer</string>
    <string name="add_new_note">Add new note</string>
    <string name="sort">Sort</string>
    <string name="icon_image">Icon image</string>
    <string name="return_">Return</string>
    <string name="title">Title</string>
    <string name="read_only_mode">Read only mode</string>
    <string name="mic">Mic</string>
    <string name="recent_search">Recent search</string>
    <string name="all_notes">All notes</string>
    <string name="find_in_note">Find in note</string>
    <string name="search">Search</string>
    <string name="more_options">More options</string>
    <string name="delete">Delete</string>
    <string name="favourite">Favourite</string>
    <string name="last_update">Last update</string>
    <string name="create_date">Create Date</string>
    <string name="exit">Exit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>