<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/read"
        android:icon="@drawable/baseline_menu_book_24"
        android:title="@string/read_only_mode"
        android:checkable="true"
        android:iconTint="@color/menuIconTint"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        android:iconTint="@color/menuIconTint"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/options"
        android:icon="@drawable/baseline_more_vert_24"
        android:title="@string/more_options"
        android:iconTint="@color/menuIconTint"
        app:showAsAction="ifRoom" >

        <menu>

            <item
                android:id="@+id/delete"
                android:icon="@drawable/baseline_delete_24"
                android:title="@string/delete"
                android:iconTint="@color/menuIconTint"
                app:showAsAction="never" />

            <item
                android:id="@+id/favourite"
                android:icon="@drawable/baseline_star_outline_24"
                android:title="@string/favourite"
                android:iconTint="@color/menuIconTint"
                app:showAsAction="never" />

        </menu>

    </item>

</menu>