<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".FindNote"
        android:background="@color/backgroundColor">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="2dp">

            <ImageButton
                android:id="@+id/btnReturn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:adjustViewBounds="true"
                android:background="@drawable/round_button_background"
                android:contentDescription="@string/return_"
                android:scaleType="fitXY"
                android:src="@drawable/baseline_keyboard_arrow_left_24"
                style="@style/ImageButtonTintStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:autofillHints=""
                android:background="@null"
                android:hint="@string/search"
                android:textColor="@color/textColor"
                android:inputType="text"
                android:textSize="21sp"
                android:imeOptions="actionSearch"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnReturn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnMic"/>

            <ImageButton
                android:id="@+id/btnMic"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/round_button_background"
                android:contentDescription="@string/mic"
                android:src="@drawable/baseline_mic_24"
                style="@style/ImageButtonTintStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/reverseBackgroundColor20"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp">

            <LinearLayout
                android:id="@+id/layoutRecent"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recent_search"
                    android:textColor="@color/textColor"
                    android:layout_marginBottom="8dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewRecent"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewSearchedNote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>


    </LinearLayout>
</layout>