<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_home_xml_constraintlayout_scene"
        tools:context=".HomeFragment"
        android:background="@color/backgroundColor">

        <LinearLayout
            android:id="@+id/layoutTitle"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/textColor"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/tvNumNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:text=""
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutTitle"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/all_notes"
                        android:textColor="@color/textColor"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageButton
                            android:id="@+id/btnSearch"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/round_button_background"
                            android:contentDescription="@string/search"
                            android:padding="2dp"
                            android:src="@drawable/baseline_search_24"
                            style="@style/ImageButtonTintStyle"/>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="end|center"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginBottom="8dp">

                    <LinearLayout
                        android:id="@+id/dropdown_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginHorizontal="5dp"
                        android:paddingVertical="2dp"
                        android:paddingHorizontal="7dp"
                        android:background="@drawable/round_corner_button_background50"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/icon_image"
                            android:src="@drawable/baseline_list_24"
                            android:alpha="0.5"
                            android:clickable="false"
                            app:tint="@color/reverseBackgroundColor" />

                        <TextView
                            android:id="@+id/tvType"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textColor"
                            android:alpha="0.5"
                            android:layout_marginEnd="5dp"/>

                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:background="@color/reverseBackgroundColor"/>

                    <ImageButton
                        android:id="@+id/btnSort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:contentDescription="@string/sort"
                        android:background="@drawable/round_button_background"
                        android:src="@drawable/baseline_arrow_upward_24"
                        android:alpha="0.5"
                        style="@style/ImageButtonTintStyle"/>

                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"/>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAdd"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:contentDescription="@string/add_new_note"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="30dp"
            app:shapeAppearanceOverlay="@style/fabRounded"
            android:src="@drawable/baseline_draw_24"/>

    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>